Add User Model with Devise

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,7 +1,7 @@
-/*changes the font of the page --->*/
+/*changes the font of the page --->
 $baseFontFamily: Oxygen;
 @import url(http://fonts.googleapis.com/cscs?family=Oxygen);
-
+*/
 
 $btnPrimaryBackground: green;
 $navbarBackgroundHighlight: white;
