add Paperclip Gem

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,11 @@
 <% if user_signed_in? %>
-	<h1> You're logged the F in. Nice work. </h1>
+	<h1> You're logged in. Nice work. </h1>
 <%else%>
 
 
 <div class="hero-unit">
 
-	<h1>This is F@cking Awesome!!</h1>
+	<h1>This. Is. Rails!!</h1>
 	<p>
 		Home page. Got'em
 		<%= link_to "One Month Rails", "http://onemonthrails.com" %>
