--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,7 @@
 <p>
 	<%= link_to "One Month Rails", "http://onemonthrails.com" %>
 	is a product to teach
-	<%= link_to "Runy on Rails", "http://rubyonrails.org" %>
+	<%= link_to "Ruby on Rails", "http://rubyonrails.org" %>
 	in one month. This is the sample application.
 </p>
 
